use boostrap instead of table for recommendations

--- a/web/app/templates/base.html
+++ b/web/app/templates/base.html
@@ -10,14 +10,19 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
     <link rel="stylesheet" type="text/css" href="css/search_bar.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
     <!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.js"> -->
 
-    {% block header %}{% endblock header %}
+    <!-- {% block header %}{% endblock header %} -->
   </head>
+
+
     <body>
       <div class="container">
         {% block body %}{% endblock body %}
       </div>
       {% block js %}{% endblock js %}
     </body>
+
 </html>
